<resources>
    <string name="app_name">Studentbay</string>
    <string name="login">Login</string>
    <string name="prompt_email">Studentnr</string>
    <string name="prompt_password">Passord</string>
    <string name="action_sign_in">Logg inn</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Velkommen!"</string>
    <string name="invalid_username">Ikke gyldig brukernavn</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Logg inn failet"</string>
    <string name="registration">Registrer</string>
    <string name="firstName">Fornavn</string>
    <string name="lastName">Etternavn</string>
    <string name="campus">Campus</string>
    <string name="year">Årskull</string>
    <string name="education">Utdanning</string>
    <string name="subject">Fag</string>
    <string name="bio">Biografi</string>
    <string name="link">Lik til sosiale medier</string>
    <string name="userPic">Last opp bilde</string>
    <string name="reg">Lagre</string>
    <string name="name">Navn</string>
    <string name="search">Søk på fagkode...</string>
    <string name="about">Studentbay er en app av studenter for studenter. Her skal
    det være enkelt og lettvidt å finne andre studenter som trenger gruppe
    for oppgaver, eksamen eller kollokviegruppe</string>
    <string name="account">Brukerprofil</string>
    <string name="studentnr">Studentnr</string>
    <string name="password">Passord</string>
    <string name="school">Skolenavn</string>
    <string name="overskrift1">Studentnr:</string>
    <string name="overskrift2">Fornavn:</string>
    <string name="overskrift3">Etternavn:</string>
    <string name="overskrift4">Skolenavn:</string>
    <string name="overskrift5">Fag der bruker ønsker gruppe:</string>
    <string name="overskrift6">Årskull:</string>
    <string name="overskrift7">Endre brukerinformasjon</string>
    <string name="overskrift8">Brukerprofil</string>
    <string name="edit">Endre</string>
    <string name="logout">Logg ut</string>
    <string name="back">Tilbake</string>
    <string name="delete">Slett bruker</string>
    <string name="sok">Søk</string>
    <string name="searchresults">Søkeresultater</string>
    <string name="savechanges">Lagre endringer</string>
    <string name="logo">Logo</string>
    <string name="eddit">Endre</string>
    <string name="btndark">Dark mode</string>
    <string name="forklaring">Trykk på en student for å se profilen deres</string>


    <string-array name="course_list">
        <item>Liste over emner</item>
        <item>MOB3000</item>
        <item>APP2000</item>
        <item>AI3000</item>
        <item>DAT2000</item>
        <item>PRG1100</item>
    </string-array>

    <string-array name="group_list">
        <item>Liste over grupper</item>
        <item>Gruppe 1</item>
        <item>Gruppe 2</item>
        <item>Gruppe 3</item>
        <item>Gruppe 4</item>
        <item>Gruppe 5</item>
    </string-array>

    <string name="notificationNum"></string>
    <string name="invite">Inviter</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_account">Brukerprofil</string>
    <string name="menu_logout">Logg ut</string>
    <string name="menu_home">Hjem</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="channel_name">default</string>
    <string name="channel_description">default</string>
</resources>