<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/student_studentid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/studentnr"
            android:textColor="@color/colorText"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/student_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstName"
            android:textColor="@color/colorText"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/student_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            android:textColor="@color/colorText"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/student_campus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campus"
            android:textColor="@color/colorText"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/student_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="@color/colorText"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/student_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textColor="@color/colorText"
            android:textSize="25dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/edit_Image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>