<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registrering"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="logo"
        android:padding="50dp"
        app:srcCompat="@drawable/logo5" />

    <EditText
        android:id="@+id/studentnr"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:selectAllOnFocus="true"
        android:background="@color/colorText"
        android:hint="@string/studentnr" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:background="@color/colorText"
        android:hint="@string/password" />

    <View
        android:id="@+id/divider12"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorText"
        android:hint="@string/firstName" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorText"
        android:hint="@string/lastName" />

    <View
        android:id="@+id/divider11"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="?android:attr/listDivider" />

    <Spinner
        android:id="@+id/campus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="number"
        android:background="@color/colorText"/>

    <View
        android:id="@+id/divider10"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/subject"
        android:background="@color/colorText"/>

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="?android:attr/listDivider" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        />

    <Button
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        android:text="@string/reg"
        android:textColor="@color/colorText"
        android:onClick="onClickSave"
        android:textAllCaps="false"/>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/backbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:onClick="goBack"
        android:background="@color/colorOrange"
        android:textColor="@color/colorText"/>

</LinearLayout>
</ScrollView>